# Gestor-negocio

./: .gitignore  README.md
back/: .env.example  README.md  pyproject.toml  requirements.txt
back/app/: __init__.py  main.py
back/app/api/: router.py
back/app/api/routes/: categories.py  clients.py  health.py  modules.py  products.py  sales.py  suppliers.py
back/app/core/: config.py  constants.py
back/app/db/: bootstrap.py  session.py
back/app/models/: __init__.py  cash_closing.py  cash_movement.py  category.py  client.py  product.py  product_category.py  product_supplier.py  sale.py  sale_item.py  sale_payment.py  supplier.py
back/app/repositories/: base.py  catalog.py  clients.py  sales.py  suppliers.py
back/app/schemas/: category.py  client.py  module.py  product.py  sale.py  supplier.py
back/app/services/: catalog.py  clients.py  sales.py  suppliers.py
back/app/services/licensing/: __init__.py  device.py  service.py  storage.py
back/tests/: conftest.py  test_catalog.py  test_clients_suppliers.py  test_db_bootstrap.py  test_health.py  test_sales.py  test_schema.py
docs/: architecture.md  database-schema.md  getting-started.md  manual-testing.md  project-journal.md  repository-guide.md
front/: README.md  index.html  package-lock.json  package.json  requirements.txt
front/src/: App.tsx  main.tsx
front/src/app/: router.ts
front/src/features/dashboard/: types.ts
front/src/layouts/: ShellLayout.tsx
front/src/shared/api/: client.ts
front/src/shared/styles/: global.css
scripts/: dev-back.ps1  dev-front.ps1
(+2 files in other folders)
